# terrarium

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  composer.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
docs/: README.md  api.md  architecture.md  errors.md  execution-modes.md  install.md
examples/: four_langs.php  inferred_types.php  js_and_python.php  typescript.php
guests/boa/: Cargo.toml  README.md
guests/boa/src/: lib.rs
guests/php/: README.md  build.sh  fiber_stub.c  php_guest.c  posix_stub.c
guests/php/wasi-shims/: grp.h  netdb.h  pwd.h  syslog.h  terrarium_wasi_compat.h  ucontext.h
guests/php/wasi-shims/sys/: un.h  wait.h
guests/quickjs/: README.md  build.sh  quickjs_guest.c
guests/rustpython/: Cargo.toml  README.md
guests/rustpython/.cargo/: config.toml
guests/rustpython/src/: lib.rs
guests/typescript/: README.md  build.sh  driver.js  ts_guest.c
guests/typescript/wizen/: Cargo.toml
guests/typescript/wizen/src/: main.rs
lib/: PhpDocType.php  Terrarium.php  TypeInference.php
src/: bridge.rs  exceptions.rs  handles.rs  lib.rs  marshal.rs
tests/php/: 01_boa.php  02_quickjs.php  03_rustpython.php  04_namespaces.php  05_limits.php  06_types.php  07_io.php  08_php.php  09_typescript.php  10_hardening.php  _harness.php
tests/wasm/: boa_guest.wasm  quickjs_guest.wasm
tests/wasm/adversarial/: bad_hostcall_len.wat  bad_return_len.wat
